Add exploratory html

--- a/exploratory.ipynb
+++ b/exploratory.ipynb
@@ -5073,9 +5073,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2017 (saved locally)](img/map_2017.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5097,6 +5106,13 @@
     "fig.add_layer(gmaps.heatmap_layer(geo_2018[['lat','lon']],\n",
     "                                  weights=geo_2018.rides))\n",
     "fig "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2018 (saved locally)](img/map_2018.png)"
    ]
   },
   {
@@ -5124,6 +5140,13 @@
     "fig.add_layer(gmaps.heatmap_layer(geo_2019[['lat','lon']],\n",
     "                                  weights=geo_2019.rides))\n",
     "fig "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2019 (saved locally)](img/map_2019.png)"
    ]
   },
   {
@@ -5163,6 +5186,13 @@
     "fig.add_layer(gmaps.heatmap_layer(geo_combined[['lat','lon']],\n",
     "                                  weights=geo_combined.rides))\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2017-2019 (saved locally)](img/map_total.png)"
    ]
   },
   {
